// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components | Typeahead / controlled default 1`] = `
<div>
  <div>
    <label
      data-css-w0yocm=""
    >
      <div
        data-css-1r967oi=""
      >
        <div
          data-css-1xm24a9=""
        >
          <div
            data-css-177hkuc=""
          >
            <input
              data-css-lzb8ea=""
              disabled={false}
              onChange={[Function]}
              onFocus={[Function]}
              value=""
            />
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots Components | Typeahead / form props all 1`] = `
<div>
  <div>
    <label
      data-css-w0yocm=""
    >
      <div
        data-css-n53zhn=""
      >
        Some label
      </div>
      <div
        data-css-1r967oi=""
      >
        <div
          data-css-1xm24a9=""
        >
          <div
            data-css-177hkuc=""
          >
            <input
              data-css-lzb8ea=""
              disabled={false}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Some placeholder"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        data-css-1de0a6a=""
      >
        Some sublabel
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots Components | Typeahead / form props all w/error 1`] = `
<div>
  <div>
    <label
      data-css-w0yocm=""
    >
      <div
        data-css-n53zhn=""
      >
        Some label
      </div>
      <div
        data-css-1r967oi=""
      >
        <div
          data-css-utxo7p=""
        >
          <div
            data-css-177hkuc=""
          >
            <input
              data-css-lzb8ea=""
              disabled={false}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Some placeholder"
              value=""
            />
          </div>
        </div>
        <div
          data-css-loo18p=""
        >
          <div
            data-css-otejxm=""
          >
            <svg
              aria-label="warning icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M2 12C2 6.486 6.486 2 12 2s10 4.486 10 10-4.486 10-10 10S2 17.514 2 12zm2 0c0 4.411 3.589 8 8 8s8-3.589 8-8-3.589-8-8-8-8 3.589-8 8zm8.5 6h-1a.5.5 0 01-.5-.5v-1a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v1a.5.5 0 01-.5.5zm0-4h-1a.5.5 0 01-.5-.5V7a.5.5 0 01.5-.5h1a.5.5 0 01.5.5v6.5a.5.5 0 01-.5.5z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        data-css-1de0a6a=""
      >
        Some sublabel
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots Components | Typeahead / form props label and subLabel 1`] = `
<div>
  <div>
    <label
      data-css-w0yocm=""
    >
      <div
        data-css-n53zhn=""
      >
        Some label
      </div>
      <div
        data-css-1r967oi=""
      >
        <div
          data-css-1xm24a9=""
        >
          <div
            data-css-177hkuc=""
          >
            <input
              data-css-lzb8ea=""
              disabled={false}
              onChange={[Function]}
              onFocus={[Function]}
              value=""
            />
          </div>
        </div>
      </div>
      <div
        data-css-1de0a6a=""
      >
        Some sublabel
      </div>
    </label>
  </div>
</div>
`;

exports[`Storyshots Components | Typeahead / uncontrolled default 1`] = `
<div>
  <div>
    <label
      data-css-w0yocm=""
    >
      <div
        data-css-1r967oi=""
      >
        <div
          data-css-1xm24a9=""
        >
          <div
            data-css-177hkuc=""
          >
            <input
              data-css-lzb8ea=""
              disabled={false}
              onChange={[Function]}
              onFocus={[Function]}
              value=""
            />
          </div>
        </div>
      </div>
    </label>
  </div>
</div>
`;
